# fastapi-course

./: .gitignore  book2.py  pyproject.toml  run.sh  test.sh
Project 1/: README.md
TodoApp/: alembic.ini  database.py  main.py  models.py
TodoApp/alembic/: env.py
TodoApp/alembic/versions/: 66ce6f16ea8d_create_phone_number_for_user_column.py
TodoApp/routers/: admin.py  auth.py  todo.py  user.py
TodoApp/test/: conftest.py  test_admin.py  test_auth.py  test_example.py  test_main.py  test_todo.py  test_user.py  utils.py
